# tonic-perps-v1

./: .codecov.yml  .gitignore  Cargo.toml  Justfile  README.md  ava.config.cjs  package.json
crates/tonic-perps/: Cargo.toml
crates/tonic-perps-indexer/: Cargo.toml  README.md  diesel.toml  docker-compose.yml
crates/tonic-perps-indexer/migrations/2022-10-26-204750_init/: down.sql  up.sql
crates/tonic-perps-indexer/migrations/2022-10-26-225930_add-lp-price-update/: down.sql  up.sql
crates/tonic-perps-indexer/migrations/2022-10-27-013752_add-mint-burn-lp/: down.sql  up.sql
crates/tonic-perps-indexer/migrations/2022-10-28-231225_add-edit-position/: down.sql  up.sql
crates/tonic-perps-indexer/migrations/2022-11-04-041329_add-token/: down.sql  up.sql
crates/tonic-perps-indexer/migrations/2022-11-11-184834_add-referral-code/: down.sql  up.sql
crates/tonic-perps-indexer/migrations/2022-11-16-233601_add-adjusted-delta-usd/: down.sql  up.sql
crates/tonic-perps-indexer/migrations/2022-11-22-014819_add-trigger-events/: down.sql  up.sql
crates/tonic-perps-indexer/migrations/2022-12-01-213355_limit_order_id/: down.sql  up.sql
crates/tonic-perps-indexer/migrations/2022-12-07-110741_swap_and_liquidation_events/: down.sql  up.sql
crates/tonic-perps-indexer/migrations/2022-12-14-185923_add_dollar_swap_value/: down.sql  up.sql
crates/tonic-perps-indexer/migrations/2022-12-14-191533_add_liquidation_fees/: down.sql  up.sql
crates/tonic-perps-indexer/migrations/2022-12-17-183148_fix-liquidation-event/: down.sql  up.sql
crates/tonic-perps-indexer/src/: config.rs  constants.rs  db.rs  event.rs  main.rs  schema.rs  tps_counter.rs  worker.rs
crates/tonic-perps-sdk/: Cargo.toml
crates/tonic-perps-sdk/src/: event_types.rs  lib.rs
crates/tonic-perps/src/: actions.rs  admin.rs  constants.rs  lib.rs  oracle.rs  referrals.rs  switchboard.rs  token_receiver.rs  token_transfer_history.rs  trading.rs  upgrade.rs  util.rs  views.rs
crates/tonic-perps/tests/: test_admin.rs  test_aum.proptest-regressions  test_aum.rs  test_decrease_long_position.proptest-regressions  test_decrease_long_position.rs  test_decrease_short_position.proptest-regressions  test_decrease_short_position.rs  test_ft.rs  test_funding_rate.rs  test_increase_position.rs  test_limit_orders.rs  test_liquidate.rs  test_liquidation_price.rs  test_lp_mint.rs  test_open_interest_limits.rs  test_oracle.rs  test_position_limits.rs  test_position_value.rs  test_referrals.rs  test_spot.rs  test_swap.rs  test_swap_fee.rs  test_utils.rs  test_views.rs  test_withdrawal_limit.rs
(+47 files in other folders)
