[workspace]
members = [
    "crates/*",
]

[profile.test]
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[profile.release]
codegen-units = 1
opt-level = "s"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[profile.release.package.tonic-perps]
# Tell `rustc` to optimize for small code size.
opt-level = "z"

[profile.release.package.tonic-perps-indexer]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
