[package]
name = "tonic-perps-indexer"
version = "0.1.0"
authors = ["Tonic Foundation <hello@tonic.foundation>"]
edition = "2018"

[dependencies]
# required
near-lake-framework = "0.7.1"
futures = "0.3.5"
itertools = "0.10.3"
tokio = { version = "1.1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }

# event serde deps
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"

# app deps
ansi_term = "0.12.1"
anyhow = "1.0.52"
bs58 = "0.4.0"
clap = { version = "3.0.14", features = ["derive"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
rand = { version = "0.8.5" }

# diesel, turn on datetime serde, postgres, and r2d2 pooling support
chrono = "0.4.23"
diesel = { version = "2.0.0", features = ["chrono", "postgres", "r2d2"] }
diesel-derive-enum = { version = "2.0.1", features = ["postgres"] }

tonic-perps-sdk = { path = "../tonic-perps-sdk" }
