[package]
name = "tonic-perps-sdk"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uint = { version = "0.9.0", default-features = false }
serde = { version = "*", features = ["derive"] }
serde_json = "*"

near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
